--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       - 3000:3000
     depends_on:
       - db
+      - redis
     stdin_open: true
     tty: true
     entrypoint: entrypoint.sh
